[UP] clean window rules and keybindings

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -174,24 +174,31 @@ windowrule = float,feh|Viewnior|Gpicview|Gimp|nomacs
 windowrule = float,VirtualBox Manager|qemu|Qemu-system-x86_64
 windowrule = float,xfce4-appfinder
 
+# Dolphin
+windowrule = float,^(org.kde.dolphin)$
+windowrulev2 = size 1280 720,class:^(org.kde.dolphin)$
+windowrulev2 = center, class:^(org.kde.dolphin)$
+
+# Gnome Settings
+windowrule=float,^(org.gnome.Settings)$
+windowrulev2=center,class:^(org.gnome.Settings)$
+windowrulev2=size 1280 720,class:^(org.gnome.Settings)$
+
+# Bitwarden
+windowrule = float,^(bitwarden)$
+windowrulev2 = float,title:^(bitwarden)$
+
+# Browser
 windowrulev2 = float,class:^()$,title:^(Picture in picture)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
-windowrulev2 = float,class:^(brave.*)$,title:^(Bitwarden)$
+
 windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(org.twosheds.iwgtk)$
 windowrulev2 = float,class:^(blueberry.py)$
 windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 
-windowrule = float,foot-full
-windowrule = move 0 0,foot-full
-windowrule = size 100% 100%,foot-full
-
-windowrule = float,wlogout
-windowrule = move 0 0,wlogout
-windowrule = size 100% 100%,wlogout
-windowrule = animation slide,wlogout
-
+# XwaylandBridge
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
@@ -238,13 +245,12 @@ bind = $mainMod,Return,exec,$term2
 bind = $mainMod SHIFT,Return,exec,$term1
 bind = $mainMod ALT,Return,exec,$term
 
-bind = $mainMod SHIFT, T ,exec,$files
+bind = $mainMod, E ,exec,$files
 bind = $mainMod SHIFT, E ,exec,$editor
 bind = $mainMod SHIFT, I ,exec,$editor-everywhere
 bind = $mainMod SHIFT, W ,exec,$browser
 bind = $mainMod SHIFT, N, exec, swaync-client -t -sw
 bind = $mainMod CTRL, S, exec,XDG_CURRENT_DESKTOP="gnome" gnome-control-center
-bind = CTRL SHIFT, Escape, exec, btop
 
 bind = $mainMod, D, exec,$appmenu
 bind = $mainMod, X, exec,$powermenu
@@ -290,8 +296,8 @@ bind = $mainMod, O, toggleopaque
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-binde = $mainMod CTRL, Minus, splitratio, -0.1
-binde = $mainMod CTRL, Equal, splitratio, 0.1
+bind = $mainMod CTRL, Minus, splitratio, -0.1
+bind = $mainMod CTRL, Equal, splitratio, 0.1
 
 bind = $mainMod, Tab, cyclenext,          # change focus to another window
 bind = $mainMod, Tab, bringactivetotop,   # bring it to the top
