[ADD] dispatcher group config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -96,6 +96,12 @@ group {
     # Theme from pywal
     col.border_active = $color1
     col.border_inactive = $color0
+
+    groupbar {
+       enabled = true
+       col.active = $color1
+       col.inactive = $color0
+    }
 }
 
 decoration {
@@ -291,6 +297,8 @@ bind = $mainMod, Space, togglefloating,
 bind = $mainMod SHIFT, Space, togglesplit,
 bind = $mainMod, P, pseudo,
 bind = $mainMod, O, toggleopaque
+bind = $mainMod CTRL, Space, pin
+bind = $mainMod, G, togglegroup
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
@@ -314,10 +322,13 @@ bind = $mainMod, K, bringactivetotop
 bind = $mainMod, J, movefocus, d
 bind = $mainMod, J, bringactivetotop
 
-bind = $mainMod SHIFT, H, movewindow, l
-bind = $mainMod SHIFT, L, movewindow, r
-bind = $mainMod SHIFT, K, movewindow, u
-bind = $mainMod SHIFT, J, movewindow, d
+bind = $mainMod SHIFT, H, movewindoworgroup, l
+bind = $mainMod SHIFT, L, movewindoworgroup, r
+bind = $mainMod SHIFT, K, movewindoworgroup, u
+bind = $mainMod SHIFT, J, movewindoworgroup, d
+
+bind = $mainMod, B, changegroupactive, b
+bind = $mainMod SHIFT, B, changegroupactive, f
 
 bind = $mainMod CTRL, H, resizeactive, -20 0
 bind = $mainMod CTRL, L, resizeactive, 20 0
@@ -332,6 +343,21 @@ bind = $mainMod, parenleft, workspace, 5
 bind = $mainMod, minus, workspace, 6
 bind = $mainMod, egrave, workspace, 7
 bind = $mainMod, underscore, workspace, 8
+
+# Move workspace to diffrent monitor
+bind=$mainMod ALT,h,movecurrentworkspacetomonitor,l
+bind=$mainMod ALT,j,movecurrentworkspacetomonitor,p
+bind=$mainMod ALT,k,movecurrentworkspacetomonitor,u
+bind=$mainMod ALT,l,movecurrentworkspacetomonitor,r
+
+# bind = $mainMod, ampersand, focusworkspaceoncurrentmonitor, 1
+# bind = $mainMod, eacute, focusworkspaceoncurrentmonitor, 2
+# bind = $mainMod, quotedbl, focusworkspaceoncurrentmonitor, 3
+# bind = $mainMod, apostrophe, focusworkspaceoncurrentmonitor, 4
+# bind = $mainMod, parenleft, focusworkspaceoncurrentmonitor, 5
+# bind = $mainMod, minus, focusworkspaceoncurrentmonitor, 6
+# bind = $mainMod, egrave, focusworkspaceoncurrentmonitor, 7
+# bind = $mainMod, underscore, focusworkspaceoncurrentmonitor, 8
 
 bind = ALT, ampersand, movetoworkspace, 1
 bind = ALT, eacute, movetoworkspace, 2
