[UP] remove gradient and title for groupbar + organize workspace keybinding

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -99,6 +99,12 @@ group {
 
     groupbar {
        enabled = true
+       gradients = false
+       render_titles = false
+
+       # Wait for 0.35 version
+       # height = 20
+
        col.active = $color1
        col.inactive = $color0
     }
@@ -344,12 +350,7 @@ bind = $mainMod, minus, workspace, 6
 bind = $mainMod, egrave, workspace, 7
 bind = $mainMod, underscore, workspace, 8
 
-# Move workspace to diffrent monitor
-bind=$mainMod ALT,h,movecurrentworkspacetomonitor,l
-bind=$mainMod ALT,j,movecurrentworkspacetomonitor,p
-bind=$mainMod ALT,k,movecurrentworkspacetomonitor,u
-bind=$mainMod ALT,l,movecurrentworkspacetomonitor,r
-
+# Wait for 0.35 version
 # bind = $mainMod, ampersand, focusworkspaceoncurrentmonitor, 1
 # bind = $mainMod, eacute, focusworkspaceoncurrentmonitor, 2
 # bind = $mainMod, quotedbl, focusworkspaceoncurrentmonitor, 3
@@ -358,6 +359,11 @@ bind=$mainMod ALT,l,movecurrentworkspacetomonitor,r
 # bind = $mainMod, minus, focusworkspaceoncurrentmonitor, 6
 # bind = $mainMod, egrave, focusworkspaceoncurrentmonitor, 7
 # bind = $mainMod, underscore, focusworkspaceoncurrentmonitor, 8
+
+bind=$mainMod ALT,h,movecurrentworkspacetomonitor,l
+bind=$mainMod ALT,j,movecurrentworkspacetomonitor,p
+bind=$mainMod ALT,k,movecurrentworkspacetomonitor,u
+bind=$mainMod ALT,l,movecurrentworkspacetomonitor,r
 
 bind = ALT, ampersand, movetoworkspace, 1
 bind = ALT, eacute, movetoworkspace, 2
@@ -381,4 +387,4 @@ env = XDG_SESSION_TYPE=wayland
 env = XDG_SESSION_DESKTOP=Hyprland
 
 exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
