[UP] window rules

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -175,8 +175,8 @@ misc {
 
 # Float Necessary Windows
 windowrule = float,Wofi
+windowrule = float,rofi
 windowrule = float,waypaper
-windowrule = float,Tuple
 windowrule = float,pavucontrol
 windowrule = float,foot-float
 windowrule = float,yad|nm-connection-editor|pavucontrolk
@@ -184,6 +184,10 @@ windowrule = float,polkit-gnome|kvantummanager|qt5ct
 windowrule = float,feh|Viewnior|Gpicview|Gimp|nomacs
 windowrule = float,VirtualBox Manager|qemu|Qemu-system-x86_64
 windowrule = float,xfce4-appfinder
+
+# Tuple
+windowrule = float,Tuple
+windowrule = workspace 4,Tuple
 
 # Dolphin
 windowrule = float,^(org.kde.dolphin)$
@@ -196,13 +200,14 @@ windowrulev2=center,class:^(org.gnome.Settings)$
 windowrulev2=size 1280 720,class:^(org.gnome.Settings)$
 
 # Bitwarden
-windowrule = float,^(bitwarden)$
-windowrulev2 = float,title:^(bitwarden)$
+windowrule = float,bitwarden
+windowrulev2 = float,class:^brave-(.*),title:Bitwarden
 
 # Browser
 windowrulev2 = float,class:^()$,title:^(Picture in picture)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
+windowrule = workspace 3,brave-browser
 
 windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(org.twosheds.iwgtk)$
@@ -216,6 +221,18 @@ windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 
+# Emacs
+windowrule = workspace 2,^(emacs)$
+
+# Discord
+windowrule = workspace 1,^(discord)$
+
+# Slack
+windowrule = workspace 1,^(slack)$
+
+# All
+windowrule = opacity 0.90 override 0.90 override, .*
+
 #windowrule = move 69 420,abc
 #windowrule = size 420 69,abc
 #windowrule = tile,xyz
@@ -225,8 +242,6 @@ windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 #windowrule = opacity 1.0,abc
 #windowrule = animation slide left,abc
 #windowrule = rounding 10,abc
-
-windowrule = opacity 0.90 override 0.90 override, .*
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
