--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -3,6 +3,7 @@ workspace = eDP-1, 1
 
 monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
 monitor = desc:AOC U32E2WG6 QELM5JA000186, 2560x1440@60, 1920x0, 1
+monitor = desc:AOC Q3279WG5B 0x000067FB, 2560x1440@60, 1920x0, 1
 
 monitor = desc:Iiyama North America PL2390 11298JH100680, preferred, -1920x0, 1
 
