--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -229,10 +229,7 @@ windowrule = workspace 2,^(emacs)$
 windowrule = workspace 1,^(discord)$
 
 # Slack
-windowrule = workspace 1,^(slack)$
-
-# Slack
-windowrule = workspace 1,^(slack)$
+windowrule = workspace 1,^(Slack)$
 
 # All
 windowrule = opacity 0.90 override 0.90 override, .*
