[UP] waybar clock format (FR-format)

--- a/waybar/config
+++ b/waybar/config
@@ -68,7 +68,7 @@
     },
 
     "clock": {
-        "format-alt": "{:%Y-%m-%d %H:%M}",
+        "format-alt": "{:%d-%m-%Y %H:%M}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
     },
 
