[ADD] window rule for team

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -225,6 +225,9 @@ windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 # Emacs
 windowrule = workspace 2,^(emacs)$
 
+# Teams
+windowrule = workspace 1,^(teams-for-linux)$
+
 # Discord
 windowrule = workspace 1,^(discord)$
 
