[UP] rename script and add it a startup responsability

--- a/hypr/exec.conf
+++ b/hypr/exec.conf
@@ -1,8 +1,7 @@
 
 exec-once=~/.config/hypr/scripts/gtkthemes-bkp
-exec-once=flatpak run app.tuple.app
 exec-once=discord
 exec-once=emacs_start
-exec-once=slack_start
+exec-once=syadem_start
 exec-once=teams_start
 exec-once=brave
