[UP] reorganize dotfiles

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,179 +1,41 @@
-#+title: Hyprland
-#+AUTHOR Corentin ROY (JilkoniX)
-#+PROPERTY: header-args :tangle hyprland.conf
-#+STARTUP: showeverything
-
-* TABLE OF CONTENT :TOC:
-- [[#output][OUTPUT]]
-  - [[#example][Example]]
-  - [[#laptop-screen][Laptop Screen]]
-  - [[#syadem-setup][Syadem Setup]]
-  - [[#home-setup][Home Setup]]
-  - [[#default-setup][Default Setup]]
-- [[#startup][STARTUP]]
-  - [[#desktop-portals][Desktop-Portals]]
-  - [[#wallpaper-swww][Wallpaper (SWWW)]]
-  - [[#notifications][Notifications]]
-  - [[#status-bar-waybar][Status-Bar (Waybar)]]
-  - [[#startup-script][Startup Script]]
-  - [[#blue-light][Blue-Light]]
-  - [[#bluetooth][Bluetooth]]
-  - [[#swayidle][Swayidle]]
-  - [[#polkit][Polkit]]
-  - [[#wal][Wal]]
-  - [[#network-manager][Network-Manager]]
-  - [[#xwaylandvideobridge][XWaylandVideoBridge]]
-- [[#input][INPUT]]
-- [[#general][GENERAL]]
-- [[#group][GROUP]]
-- [[#decoration][DECORATION]]
-- [[#anmations][ANMATIONS]]
-- [[#dwindle][DWINDLE]]
-- [[#master][MASTER]]
-- [[#gesture][GESTURE]]
-- [[#misc][MISC]]
-- [[#window-rules][WINDOW RULES]]
-- [[#keybindings][KEYBINDINGS]]
-  - [[#variable][Variable]]
-  - [[#terminal][Terminal]]
-  - [[#apps][Apps]]
-  - [[#wofi][Wofi]]
-  - [[#misc-1][Misc]]
-  - [[#some-nice-mouse-binds][Some nice mouse binds]]
-  - [[#function-keys][Function keys]]
-  - [[#screenshots][Screenshots]]
-  - [[#image-to-text][Image To Text]]
-  - [[#hyprland][Hyprland]]
-  - [[#window-split-ratio][Window Split Ratio]]
-  - [[#tab-cycle][Tab Cycle]]
-  - [[#focus][Focus]]
-  - [[#move-window][Move Window]]
-  - [[#focus-group-window][Focus Group Window]]
-  - [[#resize-window][Resize Window]]
-  - [[#workspaces][Workspaces]]
-  - [[#send-to-workspaces][Send to Workspaces]]
-  - [[#scroll-through-existing-workspaces][Scroll Through Existing Workspaces]]
-- [[#screen-sharing][SCREEN-SHARING]]
-
-* OUTPUT
-Configure your Display resolution, offset, scale and Monitors here, use `hyprctl monitors` to get the info.
-
-~monitor = name,resolution,position,scale~
-or
-~monitor = desc:description_from_hyprctl_monitors,resolution,position,scale~
-
-*Mirrored displays*
-If you want to mirror a display, add a =,mirror,[NAME]= at the end of the monitor rule, examples:
-
-~monitor = DP-3,1920x1080@60,0x0,1,mirror,DP-2~
-
-** Example
-~monitor = eDP-1,1920x1080@60,0x0,1~
-~monitor = eDP-1,transform,0~
-~monitor = eDP-1,addreserved,10,10,10,10~
-~workspace = eDP-1,1~
-
-** Laptop Screen
-#+begin_src conf
 monitor = eDP-1, 1920x1080@60, 0x0,1
 workspace = eDP-1, 1
-#+end_src
 
-** Syadem Setup
-#+begin_src conf
 monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
 monitor = desc:AOC U32E2WG6 QELM5JA000186, 2560x1440@60, 1920x0, 1
 monitor = desc:AOC Q3279WG5B 0x000067FB, 2560x1440@60, 1920x0, 1
-#+end_src
 
-** Home Setup
-#+begin_src conf
 monitor = desc:Iiyama North America PL2390 11298JH100680, preferred, -1920x0, 1
-#+end_src
 
-** Default Setup
-#+begin_src conf
 monitor = ,1920x1080@60, 1920x0, 1
 # monitor = ,preferred, auto, 1
 # monitor = , preferred, auto, 1, mirror, eDP-1 # Mirror
 workspace = HDMI-A-1, 2
-#+end_src
 
-* STARTUP
-=dbus-update-activation-environment...= , =--user import-environment...= and the script called =desktop-portals=  are found online and known to save time on laggy app on start and other good behaviors
-
-** Desktop-Portals
-#+begin_src conf
 exec-once = ~/.config/hypr/scripts/desktop-portals.sh
-#+end_src
 
-** Wallpaper (SWWW)
-#+begin_src conf
-exec-once = swww img ~/.config/hypr/wallpapers/nature-blue-simplist.jpg
-exec-once = swww init; swww kill; swww init
-#+end_src
+exec-once = swww-daemon
 
-** Notifications
-#+begin_src conf
 exec = ~/.config/hypr/scripts/notifications
-#+end_src
 
-** Status-Bar (Waybar)
-#+begin_src conf
 exec-once = ~/.config/hypr/scripts/statusbar
-#+end_src
 
-** Startup Script
-#+begin_src conf
 source = ~/.config/hypr/exec.conf
-#+end_src
 
-** Blue-Light
-Make sure you have installed =hyprshade=
-#+begin_src conf
 exec-once = hyprshade auto
-#+end_src
 
-** Bluetooth
-Make sure you have installed =blueman=
-#+begin_src conf
 exec-once = blueman-applet
-#+end_src
 
-** Swayidle
-+ Dim primary screen, after 240sec decrease brightness
-+ Send notification about the pc going to sleep, after 300sec
-+ Sleep, after 360sec
-+ Before sleep lock screen
-#+begin_src conf
-exec-once = swayidle -w timeout 240 'brightnessctl --save; brightnessctl set 20%' resume 'brightnessctl --restore' timeout 300 'notify-send "Going to sleep in less a minute"' timeout 360 '~/.config/hypr/scripts/sleep' before-sleep '~/.config/hypr/scripts/lockscreen'
-#+end_src
+exec-once = swayidle -w timeout 240 'brightnessctl --save; brightnessctl set 20%' resume 'brightnessctl --restore' timeout 300 'notify-send "Going to sleep in less a minute"' timeout 360 'systemctl sleep' before-sleep '~/.config/hypr/scripts/lockscreen'
 
-** Polkit
-Be careful to use the appropriate =polkit= and the right =path=
-#+begin_src conf
 exec-once=/usr/lib/polkit-1/polkitd
-#+end_src
 
-** Wal
-#+begin_src conf
 exec-once = wal -R
-#+end_src
 
-** Network-Manager
-Make sure you havc installed =network-manager-applet=
-#+begin_src conf
 exec-once = nm-applet --indicator
-#+end_src
 
-** XWaylandVideoBridge
-#+begin_src conf
 exec-once = xwaylandvideobridge
-#+end_src
 
-* INPUT
-Configure mouse and touchpad here
-#+begin_src conf
 input {
     kb_layout = fr
     kb_variant =
@@ -192,10 +54,7 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
-#+end_src
 
-* GENERAL
-#+begin_src conf
 source = ~/.cache/wal/colors-hyprland.conf
 
 general {
@@ -224,10 +83,7 @@ general {
 
     allow_tearing = false
 }
-#+end_src
 
-* GROUP
-#+begin_src conf
 group {
     # Dracula Theme
     # col.group_border = rgba(282a36dd)
@@ -252,16 +108,7 @@ group {
        col.inactive = $color0
     }
 }
-#+end_src
 
-* DECORATION
-Decoration settings like Rounded Corners, Opacity, Blur, etc.
-
-Your blur ="amount"= is =blur_size * blur_passes= , but high blur_size (over around 5-ish) will produce artifacts.
-if you want heavy blur, you need to up the blur_passes.
-the more passes, the more you can up the blur_size without noticing artifacts.
-
-#+begin_src conf
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
@@ -290,11 +137,7 @@ decoration {
     dim_inactive = true
     dim_strength = 0.1
 }
-#+end_src
 
-
-* ANMATIONS
-#+begin_src conf
 animations {
     enabled = yes
 
@@ -305,46 +148,31 @@ animations {
     animation=windows,1,4,overshot,slide
     animation=workspaces,1,6,overshot,slide
 }
-#+end_src
 
-* DWINDLE
-#+begin_src conf
 dwindle {
     pseudotile = yes # enable pseudotiling on dwindle
     preserve_split = yes
     smart_split = false
 }
-#+end_src
 
-* MASTER
-#+begin_src conf
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = false
 }
-#+end_src
 
-* GESTURE
-#+begin_src conf
 gestures {
     workspace_swipe = yes
     workspace_swipe_fingers = 3
     workspace_swipe_create_new = true
 }
-#+end_src
 
-* MISC
-#+begin_src conf
 misc {
   disable_hyprland_logo = true
   disable_splash_rendering = true
   mouse_move_enables_dpms = true
   vfr = false
 }
-#+end_src
 
-* WINDOW RULES
-#+begin_src conf
 # Float Necessary Windows
 windowrule = float,Wofi
 windowrule = float,rofi
@@ -372,7 +200,7 @@ windowrulev2=center,class:^(org.gnome.Settings)$
 windowrulev2=size 1280 720,class:^(org.gnome.Settings)$
 
 # Bitwarden
-windowrule = float,bitwarden
+windowrule = float,(bitwarden)
 windowrulev2 = float,class:^brave-(.*),title:Bitwarden
 
 # Browser
@@ -397,7 +225,7 @@ windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 windowrule = workspace 2,^(emacs)$
 
 # Teams
-windowrule = workspace 1,^(teams-for-linux)$
+windowrule = workspace 1,^(microsoft teams)
 
 # Discord
 windowrule = workspace 1,^(discord)$
@@ -417,11 +245,7 @@ windowrule = opacity 0.90 override 0.90 override, .*
 #windowrule = opacity 1.0,abc
 #windowrule = animation slide left,abc
 #windowrule = rounding 10,abc
-#+end_src
 
-* KEYBINDINGS
-** Variable
-#+begin_src conf
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
@@ -445,48 +269,30 @@ $editor = emacsclient -c -n -a 'emacs'
 # $editor-everywhere = emacsclient --eval "(emacs-everywhere)" -a "doom +everywhere"
 $editor-everywhere = emacsclient --eval "(emacs-everywhere)"
 $browser = brave
-#+end_src
 
-** Terminal
-#+begin_src conf
 bind = $mainMod,Return,exec,$term2
 bind = $mainMod SHIFT,Return,exec,$term1
 bind = $mainMod ALT,Return,exec,$term
-#+end_src
 
-** Apps
-#+begin_src conf
 bind = $mainMod, E ,exec,$files
 bind = $mainMod SHIFT, E ,exec,$editor
 bind = $mainMod SHIFT, I ,exec,$editor-everywhere
 bind = $mainMod SHIFT, W ,exec,$browser
 bind = $mainMod SHIFT, N, exec, swaync-client -t -sw
 bind = $mainMod CTRL, S, exec,XDG_CURRENT_DESKTOP="gnome" gnome-control-center
-#+end_src
 
-** Wofi
-#+begin_src conf
 bind = $mainMod, D, exec,$appmenu
 bind = $mainMod, X, exec,$powermenu
 bind = $mainMod, W, exec,$wallpapermenu
 bind = $mainMod, T, exec,$thememenu
-#+end_src
 
-** Misc
-#+begin_src conf
 bind = $mainMod, N, exec,nm-connection-editor
 bind = $mainMod, C, exec,$colorpicker
 bind = CTRL ALT,L, exec, $suspend
-#+end_src
 
-** Some nice mouse binds
-#+begin_src conf
 bindm = SUPER,mouse:272,movewindow
 bindm = SUPER,mouse:273,resizewindow
-#+end_src
 
-** Function keys
-#+begin_src conf
 bind = ,XF86MonBrightnessUp, exec, $backlight --inc
 bind = ,XF86MonBrightnessDown, exec, $backlight --dec
 bind = ,XF86AudioRaiseVolume, exec, $volume --inc
@@ -497,24 +303,15 @@ bind = ,XF86AudioNext, exec, playerctl next
 bind = ,XF86AudioPrev, exec, playerctl previous
 bind = ,XF86AudioPlay, exec, playerctl play-pause
 bind = ,XF86AudioStop, exec, playerctl stop
-#+end_src
 
-** Screenshots
-#+begin_src conf
 bind = ,Print, exec, $screenshot --now
 bind = CTRL, Print, exec, $screenshot --in5
 bind = SHIFT, Print, exec, $screenshot --in10
 bind = $mainMod, Print, exec, $screenshot --win
 bind = $mainMod CTRL, Print, exec, $screenshot --area
-#+end_src
 
-** Image To Text
-#+begin_src conf
 bind = $mainMod SHIFT CTRL, S, exec,grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
-#+end_src
 
-** Hyprland
-#+begin_src conf
 bind = $mainMod, Q, killactive,
 bind = CTRL ALT, Delete, exit,
 bind = $mainMod, F, fullscreen, 2
@@ -530,24 +327,13 @@ bind = $mainMod, G, togglegroup
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-#+end_src
 
-** Window Split Ratio
-#+begin_src conf
 bind = $mainMod CTRL, Minus, splitratio, -0.1
 bind = $mainMod CTRL, Equal, splitratio, 0.1
-#+end_src
 
-** Tab Cycle
-To switch between windows in a floating workspace
-
-#+begin_src conf
 bind = $mainMod, Tab, cyclenext,          # change focus to another window
 bind = $mainMod, Tab, bringactivetotop,   # bring it to the top
-#+end_src
 
-** Focus
-#+begin_src conf
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, H, bringactivetotop
 
@@ -559,33 +345,20 @@ bind = $mainMod, K, bringactivetotop
 
 bind = $mainMod, J, movefocus, d
 bind = $mainMod, J, bringactivetotop
-#+end_src
 
-** Move Window
-#+begin_src conf
 bind = $mainMod SHIFT, H, movewindoworgroup, l
 bind = $mainMod SHIFT, L, movewindoworgroup, r
 bind = $mainMod SHIFT, K, movewindoworgroup, u
 bind = $mainMod SHIFT, J, movewindoworgroup, d
-#+end_src
 
-** Focus Group Window
-#+begin_src conf
 bind = $mainMod, B, changegroupactive, b
 bind = $mainMod SHIFT, B, changegroupactive, f
-#+end_src
 
-** Resize Window
-#+begin_src conf
 bind = $mainMod CTRL, H, resizeactive, -20 0
 bind = $mainMod CTRL, L, resizeactive, 20 0
 bind = $mainMod CTRL, K, resizeactive, 0 -20
 bind = $mainMod CTRL, J, resizeactive, 0 20
-#+end_src
 
-** Workspaces
-*** Focus
-#+begin_src conf
 bind = $mainMod, ampersand, workspace, 1
 bind = $mainMod, eacute, workspace, 2
 bind = $mainMod, quotedbl, workspace, 3
@@ -594,31 +367,12 @@ bind = $mainMod, parenleft, workspace, 5
 bind = $mainMod, minus, workspace, 6
 bind = $mainMod, egrave, workspace, 7
 bind = $mainMod, underscore, workspace, 8
-#+end_src
 
-*** Focus On Current Monitor
-#+begin_src conf :tangle no
-bind = $mainMod, ampersand, focusworkspaceoncurrentmonitor, 1
-bind = $mainMod, eacute, focusworkspaceoncurrentmonitor, 2
-bind = $mainMod, quotedbl, focusworkspaceoncurrentmonitor, 3
-bind = $mainMod, apostrophe, focusworkspaceoncurrentmonitor, 4
-bind = $mainMod, parenleft, focusworkspaceoncurrentmonitor, 5
-bind = $mainMod, minus, focusworkspaceoncurrentmonitor, 6
-bind = $mainMod, egrave, focusworkspaceoncurrentmonitor, 7
-bind = $mainMod, underscore, focusworkspaceoncurrentmonitor, 8
-#+end_src
-
-*** Move
-Move workspace to different monitor
-#+begin_src conf
 bind=$mainMod ALT,h,movecurrentworkspacetomonitor,l
 bind=$mainMod ALT,j,movecurrentworkspacetomonitor,p
 bind=$mainMod ALT,k,movecurrentworkspacetomonitor,u
 bind=$mainMod ALT,l,movecurrentworkspacetomonitor,r
-#+end_src
 
-** Send to Workspaces
-#+begin_src conf
 bind = ALT, ampersand, movetoworkspace, 1
 bind = ALT, eacute, movetoworkspace, 2
 bind = ALT, quotedbl, movetoworkspace, 3
@@ -627,20 +381,13 @@ bind = ALT, parenleft, movetoworkspace, 5
 bind = ALT, minus, movetoworkspace, 6
 bind = ALT, egrave, movetoworkspace, 7
 bind = ALT, underscore, movetoworkspace, 8
-#+end_src
 
-** Scroll Through Existing Workspaces
-#+begin_src conf
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 bind = $mainMod CTRL, mouse_up, workspace, +1
 bind = $mainMod CTRL, mouse_down, workspace, -1
-#+end_src
 
-
-* SCREEN-SHARING
-#+begin_src conf
 env = GDK_BACKEND=wayland,x11
 env = QT_QPA_PLATFORM="wayland;xcb"
 env = XDG_CURRENT_DESKTOP=Hyprland
@@ -649,4 +396,3 @@ env = XDG_SESSION_DESKTOP=Hyprland
 
 exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#+end_src
