--- a/.config/hypr/exec.conf
+++ b/.config/hypr/exec.conf
@@ -1,7 +1,8 @@
 
 exec-once=~/.config/hypr/scripts/gtkthemes-bkp
 exec-once=discord
-exec-once=emacs_start
+# exec-once=emacs_start
+exec-once=emacs_vanilla_start
 exec-once=syadem_start
 exec-once=teams_start
 exec-once=brave
