--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,6 +6,7 @@ monitor = desc:AOC U32E2WG6 QELM5JA000186, 2560x1440@60, 1920x0, 1
 monitor = desc:AOC Q3279WG5B 0x000067FB, 2560x1440@60, 1920x0, 1
 
 monitor = desc:Iiyama North America PL2390 11298JH100680, preferred, 1920x0, 1
+monitor = desc:Iiyama North America PL2390 11298JH100788, preferred, -1920x0, 1
 
 monitor = ,1920x1080@60, 1920x0, 1
 # monitor = ,preferred, auto, 1
