[UP] groupbar style

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -99,11 +99,10 @@ group {
     col.border_inactive = $color0
 
     groupbar {
-       enabled = true
-       gradients = false
+       gradients = true
        render_titles = false
 
-       height = 40
+       height = 5
 
        col.active = $color4
        col.inactive = $color0
