[UP] Hyprland config new version + vars

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -39,14 +39,13 @@ exec-once = xwaylandvideobridge
 
 input {
     kb_layout = fr
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
+    # kb_variant =
+    # kb_model =
+    # kb_options =
+    # kb_rules =
 
     follow_mouse = 1
 
-    force_no_accel = 0
     numlock_by_default = 1
 
     touchpad {
@@ -59,11 +58,9 @@ input {
 source = ~/.cache/wal/colors-hyprland.conf
 
 general {
-    # main_mod = SUPER
-
     gaps_in = 2
     gaps_out = 4
-    border_size = 3
+    border_size = 2
 
     layout = dwindle
 
@@ -76,13 +73,16 @@ general {
     # col.inactive_border = rgba(44475aaa)
 
     # Theme from pywal
-    col.active_border = $color1
+    col.active_border = $color4
     col.inactive_border = $color0
 
-    # Make the cursor disappear after 3 seconds
-    cursor_inactive_timeout = 3
 
     allow_tearing = false
+}
+
+# Make the cursor disappear after 3 seconds
+cursor {
+  inactive_timeout = 3
 }
 
 group {
@@ -99,11 +99,9 @@ group {
     col.border_inactive = $color0
 
     groupbar {
-       gradients = true
        render_titles = false
-
-       height = 5
-
+       gradients = true
+       height = 4
        col.active = $color4
        col.inactive = $color0
     }
@@ -135,7 +133,7 @@ decoration {
     }
 
     dim_inactive = true
-    dim_strength = 0.1
+    dim_strength = 0.05
 }
 
 animations {
@@ -225,7 +223,7 @@ windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 windowrule = workspace 2,^(emacs)$
 
 # Teams
-windowrule = workspace 1,^(microsoft teams)
+windowrule = workspace 1,^(.*Microsoft Teams.*)
 
 # Discord
 windowrule = workspace 1,^(discord)$
@@ -236,6 +234,7 @@ windowrule = workspace 1,^(Slack)$
 # All
 windowrule = opacity 0.90 override 0.90 override, .*
 
+# List of options
 #windowrule = move 69 420,abc
 #windowrule = size 420 69,abc
 #windowrule = tile,xyz
@@ -249,9 +248,8 @@ windowrule = opacity 0.90 override 0.90 override, .*
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-$term = terminator
-$term1 = kitty
-$term2 = alacritty
+$term = alacritty
+$term2 = terminator
 $wallpapermenu = ~/.config/wofi/wallpaper.sh
 $thememenu = ~/.config/wofi/theme.sh
 $appmenu = ~/.config/hypr/scripts/menu
@@ -266,12 +264,11 @@ $wlogout = ~/.config/hypr/scripts/wlogout
 $colorpicker = ~/.config/hypr/scripts/colorpicker
 $files = dolphin
 $editor = emacsclient -c -n -a 'emacs'
-# $editor-everywhere = emacsclient --eval "(emacs-everywhere)" -a "doom +everywhere"
 $editor-everywhere = emacsclient --eval "(emacs-everywhere)"
 $browser = brave
 
-bind = $mainMod,Return,exec,$term2
-bind = $mainMod SHIFT,Return,exec,$term1
+bind = $mainMod,Return,exec,$term
+bind = $mainMod SHIFT,Return,exec,$term2
 bind = $mainMod ALT,Return,exec,$term
 
 bind = $mainMod, E ,exec,$files
@@ -311,6 +308,7 @@ bind = $mainMod, Print, exec, $screenshot --win
 bind = $mainMod CTRL, Print, exec, $screenshot --area
 
 bind = $mainMod SHIFT CTRL, S, exec, grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
+
 bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)" - | swappy -f -
 
 bind = $mainMod, Q, killactive,
