[ADD] flag resizewindow binding

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -353,10 +353,10 @@ bind = $mainMod SHIFT, J, movewindoworgroup, d
 bind = $mainMod, B, changegroupactive, b
 bind = $mainMod SHIFT, B, changegroupactive, f
 
-bind = $mainMod CTRL, H, resizeactive, -20 0
-bind = $mainMod CTRL, L, resizeactive, 20 0
-bind = $mainMod CTRL, K, resizeactive, 0 -20
-bind = $mainMod CTRL, J, resizeactive, 0 20
+binde = $mainMod CTRL, H, resizeactive, -20 0
+binde = $mainMod CTRL, L, resizeactive, 20 0
+binde = $mainMod CTRL, K, resizeactive, 0 -20
+binde = $mainMod CTRL, J, resizeactive, 0 20
 
 bind = $mainMod, ampersand, workspace, 1
 bind = $mainMod, eacute, workspace, 2
