--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -269,7 +269,7 @@ $browser = brave
 
 bind = $mainMod,Return,exec,$term
 bind = $mainMod SHIFT,Return,exec,$term2
-bind = $mainMod ALT,Return,exec,$term
+bind = $mainMod CTRL,Return,exec,[float] $term
 
 bind = $mainMod, E ,exec,$files
 bind = $mainMod SHIFT, E ,exec,$editor
