--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -290,10 +290,10 @@ bind = CTRL ALT,L, exec, $suspend
 bindm = SUPER,mouse:272,movewindow
 bindm = SUPER,mouse:273,resizewindow
 
-bind = ,XF86MonBrightnessUp, exec, $backlight --inc
-bind = ,XF86MonBrightnessDown, exec, $backlight --dec
-bind = ,XF86AudioRaiseVolume, exec, $volume --inc
-bind = ,XF86AudioLowerVolume, exec, $volume --dec
+binde = ,XF86MonBrightnessUp, exec, $backlight --inc
+binde = ,XF86MonBrightnessDown, exec, $backlight --dec
+binde = ,XF86AudioRaiseVolume, exec, $volume --inc
+binde = ,XF86AudioLowerVolume, exec, $volume --dec
 bind = ,XF86AudioMute, exec, $volume --toggle
 bind = ,XF86AudioMicMute, exec, $volume --toggle-mic
 bind = ,XF86AudioNext, exec, playerctl next
@@ -330,8 +330,8 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod CTRL, Minus, splitratio, -0.1
 bind = $mainMod CTRL, Equal, splitratio, 0.1
 
-bind = $mainMod, Tab, cyclenext,          # change focus to another window
-bind = $mainMod, Tab, bringactivetotop,   # bring it to the top
+bind = $mainMod, Tab, cyclenext,        # change focus to another window
+bind = $mainMod, Tab, bringactivetotop, # bring it to the top
 
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, H, bringactivetotop
