[ADD] rofi float window rule

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -212,6 +212,9 @@ windowrulev2 = float,class:^(org.twosheds.iwgtk)$
 windowrulev2 = float,class:^(blueberry.py)$
 windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 
+# Rofi
+windowrule = float,Rofi
+
 # XwaylandBridge
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
