--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -256,6 +256,7 @@ $term2 = terminator
 $wallpapermenu = ~/.config/wofi/wallpaper.sh
 $thememenu = ~/.config/wofi/theme.sh
 $appmenu = ~/.config/hypr/scripts/menu
+$appmenu2 = ~/.config/hypr/scripts/menu2
 $menu3 = xfce4-appfinder
 $powermenu = ~/.config/hypr/scripts/powermenu
 $volume = ~/.config/hypr/scripts/volume
@@ -282,6 +283,7 @@ bind = $mainMod SHIFT, N, exec, swaync-client -t -sw
 bind = $mainMod CTRL, S, exec,XDG_CURRENT_DESKTOP="gnome" gnome-control-center
 
 bind = $mainMod, D, exec,$appmenu
+bind = $mainMod SHIFT, D, exec,$appmenu2
 bind = $mainMod, X, exec,$powermenu
 bind = $mainMod, W, exec,$wallpapermenu
 bind = $mainMod, T, exec,$thememenu
