[UP] hyprland new attributes names

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -155,7 +155,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = false
+    new_on_top = false
 }
 
 gestures {
