--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -183,6 +183,11 @@ windowrule = float,feh|Viewnior|Gpicview|Gimp|nomacs
 windowrule = float,VirtualBox Manager|qemu|Qemu-system-x86_64
 windowrule = float,xfce4-appfinder
 
+windowrulev2 = float,class:^(blueman-manager)$
+windowrulev2 = float,class:^(org.twosheds.iwgtk)$
+windowrulev2 = float,class:^(blueberry.py)$
+windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
+
 # Tuple
 windowrule = float,Tuple
 windowrule = workspace 4,Tuple
@@ -197,20 +202,12 @@ windowrule=float,^(org.gnome.Settings)$
 windowrulev2=center,class:^(org.gnome.Settings)$
 windowrulev2=size 1280 720,class:^(org.gnome.Settings)$
 
-# Bitwarden
-windowrule = float,bitwarden
-windowrulev2 = float,class:^brave-(.*),title:Bitwarden
-
 # Browser
 windowrulev2 = float,class:^()$,title:^(Picture in picture)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
+windowrulev2 = float,class:^brave-.*$
 windowrule = workspace 3,brave-browser
-
-windowrulev2 = float,class:^(blueman-manager)$
-windowrulev2 = float,class:^(org.twosheds.iwgtk)$
-windowrulev2 = float,class:^(blueberry.py)$
-windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 
 # Rofi
 windowrule = float,Rofi
@@ -226,7 +223,7 @@ windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 windowrule = workspace 2,^(emacs)$
 
 # Teams
-windowrule = workspace 1,^(.*Microsoft Teams.*)
+windowrule = workspace 1,^(.*Microsoft Teams.*)$
 
 # Discord
 windowrule = workspace 1,^(discord)$
