[UP] config + add scripts

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ exec-once = hyprshade auto
 
 exec-once = blueman-applet
 
-exec-once = swayidle -w timeout 240 'brightnessctl --save; brightnessctl set 20%' resume 'brightnessctl --restore' timeout 300 'notify-send "Going to sleep in less a minute"' timeout 360 'systemctl sleep' before-sleep '~/.config/hypr/scripts/lockscreen'
+exec-once = swayidle -w timeout 240 'brightnessctl --save; brightnessctl set 20%' resume 'brightnessctl --restore' timeout 360 'systemctl sleep' before-sleep '/home/croy/.config/hypr/scripts/lockscreen'
 
 exec-once=/usr/lib/polkit-1/polkitd
 
@@ -203,11 +203,11 @@ windowrulev2=center,class:^(org.gnome.Settings)$
 windowrulev2=size 1280 720,class:^(org.gnome.Settings)$
 
 # Browser
+windowrule = workspace 3,brave-browser
 windowrulev2 = float,class:^()$,title:^(Picture in picture)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
-windowrulev2 = float,class:^brave-.*$
-windowrule = workspace 3,brave-browser
+windowrulev2 = float,class:^brave-.*-Default$
 
 # Rofi
 windowrule = float,Rofi
