--- a/.config/electron-flags.conf
+++ b/.config/electron-flags.conf
@@ -1,2 +1,7 @@
 --enable-features=UseOzonePlatform
 --ozone-platform=wayland
+--enable-features=WaylandWindowDecorations
+--enable-features=WebRTCPipeWireCapturer
+--force-dark-mode
+--enable-features=VaapiVideoDecoder,VaapiVideoEncoder,VaapiVideoDecodeLinuxGLi
+--enable-unsafe-webgpu
