[UP] config waybar, rofi script, zshrc, wal template

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,4 +1,5 @@
-monitor = eDP-1, 1920x1080@60, 0x0,1
+# monitor = eDP-1, 1920x1080@60, 0x0,1
+monitor = eDP-1, 2880x1800@60, 0x0,1.5
 workspace = eDP-1, 1
 
 monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
@@ -177,7 +178,7 @@ windowrule = float,rofi
 windowrule = float,waypaper
 windowrule = float,pavucontrol
 windowrule = float,foot-float
-windowrule = float,yad|nm-connection-editor|pavucontrolk
+windowrule = float,yad|nm-connection-editor|pavucontrol|pulsemixer
 windowrule = float,polkit-gnome|kvantummanager|qt5ct
 windowrule = float,feh|Viewnior|Gpicview|Gimp|nomacs
 windowrule = float,VirtualBox Manager|qemu|Qemu-system-x86_64
@@ -252,8 +253,8 @@ $term = alacritty
 $term2 = terminator
 $wallpapermenu = ~/.config/wofi/wallpaper.sh
 $thememenu = ~/.config/wofi/theme.sh
-$appmenu = ~/.config/hypr/scripts/menu
-$appmenu2 = ~/.config/hypr/scripts/menu2
+$appmenu = ~/.config/hypr/scripts/menu2
+$appmenu2 = ~/.config/hypr/scripts/menu
 $menu3 = xfce4-appfinder
 $powermenu = ~/.config/hypr/scripts/powermenu
 $volume = ~/.config/hypr/scripts/volume
