[FIX] path menu script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -251,8 +251,8 @@ $mainMod = SUPER
 
 $term = alacritty
 $term2 = terminator
-$wallpapermenu = ~/.config/wofi/wallpaper.sh
-$thememenu = ~/.config/wofi/theme.sh
+$wallpapermenu = ~/.config/rofi/wallpaper.sh
+$thememenu = ~/.config/rofi/theme.sh
 $appmenu = ~/.config/hypr/scripts/menu2
 $appmenu2 = ~/.config/hypr/scripts/menu
 $menu3 = xfce4-appfinder
