--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,2 @@
 preload = ~/dotfiles/.config/hypr/wallpapers/mountain-night.jpg
-wallpaper = eDP-1,~/dotfiles/.config/hypr/wallpapers/mountain-night.jpg
-wallpaper = DP-1,~/dotfiles/.config/hypr/wallpapers/mountain-night.jpg
+wallpaper = ,~/dotfiles/.config/hypr/wallpapers/mountain-night.jpg
