[UP] lint config + enable hyprpaper at startup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,8 @@ workspace = HDMI-A-1, 2
 
 exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 
-exec-once = swww-daemon
+#exec-once = swww-daemon
+exec-once = hyprpaper
 
 exec = ~/.config/hypr/scripts/notifications
 
@@ -44,15 +45,11 @@ input {
     # kb_model =
     # kb_options =
     # kb_rules =
-
     follow_mouse = 1
-
     numlock_by_default = 1
-
     touchpad {
         natural_scroll = no
     }
-
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
@@ -62,22 +59,16 @@ general {
     gaps_in = 2
     gaps_out = 4
     border_size = 2
-
     layout = dwindle
-
     # Dracula Theme
     # col.active_border = rgb(bd93f9)
     # col.inactive_border = rgba(44475aaa)
-
     # Nord Theme
     # col.active_border = rgb(88c0d0)
     # col.inactive_border = rgba(44475aaa)
-
     # Theme from pywal
     col.active_border = $color4
     col.inactive_border = $color0
-
-
     allow_tearing = false
 }
 
@@ -90,15 +81,12 @@ group {
     # Dracula Theme
     # col.group_border = rgba(282a36dd)
     # col.group_border_active = rgb(bd93f9)
-
     # Nord Theme
     # col.border_active = rgb(88c0d0)
     # col.border_inactive = rgba(282a36dd)
-
     # Theme from pywal
     col.border_active = $color1
     col.border_inactive = $color0
-
     groupbar {
        render_titles = false
        gradients = true
@@ -110,38 +98,29 @@ group {
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     rounding = 2       # Original: 10
-
     # Shadow
     drop_shadow = yes
     shadow_range = 8
     shadow_offset = 1 2
     shadow_scale = 0.97
     shadow_render_power = 3
-
     col.shadow_inactive = 0x50000000
     col.shadow = rgba(1E202966)
-
     fullscreen_opacity=0.9
-
     blur {
         enabled = true
         size = 5 # minimum 1
         passes = 2 # minimum 1, more passes = more resource intensive.
-
         ignore_opacity = false
     }
-
     dim_inactive = true
     dim_strength = 0.05
 }
 
 animations {
     enabled = yes
-
     bezier=overshot,0.13,0.99,0.29,1.1
-
     animation=border,1,10,default
     animation=fade,1,10,default
     animation=windows,1,4,overshot,slide
