--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -39,6 +39,10 @@ exec-once = nm-applet --indicator
 
 exec-once = xwaylandvideobridge
 
+exec-once = wl-paste --type text --watch cliphist store #Stores only text data
+
+exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+
 input {
     kb_layout = fr
     # kb_variant =
@@ -369,11 +373,13 @@ bind = $mainMod, mouse_up, workspace, e-1
 bind = $mainMod CTRL, mouse_up, workspace, +1
 bind = $mainMod CTRL, mouse_down, workspace, -1
 
+bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+
 env = GDK_BACKEND=wayland,x11
 env = QT_QPA_PLATFORM="wayland;xcb"
 env = XDG_CURRENT_DESKTOP=Hyprland
 env = XDG_SESSION_TYPE=wayland
 env = XDG_SESSION_DESKTOP=Hyprland
 
-exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
