[UP] force wayland for discord

--- a/.config/hypr/exec.conf
+++ b/.config/hypr/exec.conf
@@ -1,6 +1,6 @@
 
 exec-once=~/.config/hypr/scripts/gtkthemes-bkp
-exec-once=discord
+exec-once=discord --enable-features=UseOzonePlatform --ozone-platform=wayland
 # exec-once=emacs_start
 exec-once=emacs_vanilla_start
 exec-once=syadem_start
