--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -31,7 +31,8 @@ exec-once = blueman-applet
 
 exec-once = swayidle -w timeout 240 'brightnessctl --save; brightnessctl set 5%' resume 'brightnessctl --restore' timeout 360 'systemctl sleep' before-sleep '$HOME/.config/hypr/scripts/lockscreen'
 
-exec-once=/usr/lib/polkit-1/polkitd
+# exec-once=/usr/lib/polkit-1/polkitd
+exec-once=/usr/lib/polkit-kde-authentication-agent-1
 
 exec-once = wal -R
 
