[ADD] windowrule for Pop

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -175,6 +175,9 @@ windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 windowrule = float,Tuple
 windowrule = workspace 4,Tuple
 
+# Pop
+windowrule = workspace 4,Pop
+
 # Dolphin
 windowrule = float,^(org.kde.dolphin)$
 windowrulev2 = size 1280 720,class:^(org.kde.dolphin)$
